# lakekeeper

./: .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  NOTICE  README.md  clippy.toml  index.html  justfile  renovate.json  rust-toolchain.toml
crates/authz-openfga/: Cargo.toml
crates/authz-openfga/src/: api.rs  authorizer.rs  check.rs  client.rs  config.rs  entities.rs  error.rs  health.rs  lib.rs  migration.rs  models.rs  reconcile.rs  relations.rs  tuples.rs
crates/authz-openfga/src/migration/: migration_fns_v4.rs
crates/iceberg-ext/: CHANGELOG.md  Cargo.toml
crates/iceberg-ext/src/catalog/: mod.rs  view_requirement.rs
crates/iceberg-ext/src/configs/: mod.rs  namespace.rs  table.rs
crates/io/: Cargo.toml
crates/io/src/: adls.rs  error.rs  gcs.rs  iceberg_bridge.rs  lib.rs  location.rs  memory.rs  s3.rs
crates/io/src/adls/: adls_error.rs  adls_location.rs  adls_storage.rs
crates/io/src/gcs/: gcs_error.rs  gcs_location.rs  gcs_storage.rs
crates/io/src/s3/: s3_error.rs  s3_location.rs  s3_storage.rs
crates/io/tests/: integration_tests.rs
crates/lakekeeper/: CHANGELOG.md  Cargo.toml
crates/lakekeeper-bin/: CHANGELOG.md  Cargo.toml
crates/lakekeeper-bin/src/: authorizer.rs  config.rs  events.rs  healthcheck.rs  main.rs  secrets.rs  serve.rs  ui.rs  wait_for_db.rs
crates/lakekeeper-events-kafka/: Cargo.toml
crates/lakekeeper-events-kafka/src/: config.rs  lib.rs
crates/lakekeeper-events-nats/: Cargo.toml
crates/lakekeeper-events-nats/src/: config.rs  lib.rs
crates/lakekeeper-integration-tests/: Cargo.toml
crates/lakekeeper-integration-tests/src/: internal_helper.rs  lib.rs  pagination_macro.rs
crates/lakekeeper-integration-tests/tests/: drop_recursive.rs  drop_warehouse.rs  endpoint_stats.rs  generic_table_name_collision.rs  generic_table_protection.rs  management_check.rs  management_tasks_schedule_lifecycle.rs  management_warehouse.rs  namespace_ops.rs  openfga_role_membership.rs  referenced_by.rs  referenced_by_generic_table.rs  role_membership_ops.rs  role_ops.rs  server_config.rs  server_generic_tables.rs  server_load_table.rs  server_namespace.rs  server_tables_postgres.rs  server_views.rs  server_views_commit.rs  server_views_create.rs  server_views_drop.rs  server_views_exists.rs  server_views_list.rs  server_views_load.rs  server_views_rename.rs  service_authz_table.rs  service_post_migration_hooks.rs  service_tabular_expiration_queue.rs  soft_deletion.rs  stats.rs  tasks.rs  user_stub_backfill.rs  warehouse_ops.rs
crates/lakekeeper-secrets-kv2/: Cargo.toml
crates/lakekeeper-secrets-kv2/src/: config.rs  lib.rs
crates/lakekeeper-storage-postgres/: Cargo.toml
crates/lakekeeper-storage-postgres/migrations/: 20251109122721_role_project_filter.sql  20251228101923_enable_tasks_on_project_level.sql  20260219081950_improve_list_performance.sql  20260525120000_fix_namespace_trigger_wholerow_when.sql  20260601000000_role_membership.sql  20260605000000_warehouse_managed_by.sql  20260607000000_role_membership_endpoints_and_user_name_nullable.sql  20260625000000_normalized_schema.sql
crates/lakekeeper-storage-postgres/src/: advisory_lock.rs  bootstrap.rs  catalog.rs  config.rs  dbutils.rs  idempotency.rs  lib.rs  namespace.rs  pagination.rs  pool_metrics.rs  role.rs  role_assignment.rs  secrets.rs  tasks.rs  test_utils.rs  user.rs  warehouse.rs
crates/lakekeeper-storage-postgres/src/endpoint_statistics/: list.rs  mod.rs  sink.rs
crates/lakekeeper-storage-postgres/src/migrations/: mod.rs  normalize_schema.rs  patch_migration_hash.rs  split_table_metadata.rs
crates/lakekeeper-storage-postgres/src/tabular/: generic_table.rs  load_by_location.rs  mod.rs  protection.rs
crates/lakekeeper-storage-postgres/src/tasks/: cleanup_task_logs_older_than.rs  get_task_details.rs  list_tasks.rs  resolve_tasks.rs
crates/lakekeeper-storage-postgres/tests/extension_migrations_fixture/: 20260101000000_create_ext_demo.sql
crates/lakekeeper-storage-postgres/tests/extension_migrations_fixture_invalid/: 20260101000000_create_ok.sql
crates/lakekeeper-storage-postgres/tests/extension_migrations_fixture_patched/: 20260101000000_create_ext_demo.sql
crates/lakekeeper/migrations/: 20250919101934_add_task_entity_name.sql  20250923102542_v3_support.sql  20250923164029_fuzzy_tabular_search.sql  20250930101627_active_tabulars_remove_namespace_join.sql  20251003103404_fix_project_endpoint_stats.sql  20251027163724_introduce_entity_versions.sql  20251109122721_role_project_filter.sql  20251117114624_action_endpoint_statistics.sql  20251121072340_role_external_id.sql  20251228101923_enable_tasks_on_project_level.sql  20260220011106_string_role_id.sql  20260301083426_user_role_mappings.sql  20260318120000_idempotency_record.sql  20260513091606_drop_unique_user_email.sql  20260527120000_add_schedule_task_endpoint.sql  20260529000000_add_generic_table.sql  20260529120000_warehouse_format_version_policy.sql
crates/lakekeeper/src/: config.rs  lib.rs  metrics.rs  request_metadata.rs  request_tracing.rs  serve.rs
crates/lakekeeper/src/api/: endpoints.rs  maintenance.rs  mod.rs  router.rs
crates/lakekeeper/src/catalog/: io.rs  mod.rs  namespace.rs  tables.rs  tabular.rs  views.rs
crates/lakekeeper/src/implementations/: kv2.rs  mod.rs
crates/lakekeeper/src/server/: commit_tables.rs  compression_codec.rs  config.rs  generic_tables.rs  io.rs  metrics.rs  mod.rs  namespace.rs  tables.rs  tabular.rs  views.rs
crates/lakekeeper/src/service/: admission.rs  authn.rs  cache_metrics.rs  cache_ttl.rs  catalog.rs  catalog_store.rs  contract_verification.rs  endpoint_hooks.rs  endpoint_statistics.rs  health.rs  idempotency.rs  maintenance.rs  mod.rs  post_migration_hooks.rs  secrets.rs  tabular_idents.rs  task_configs.rs
crates/lakekeeper/src/tests/: drop_recursive.rs  drop_warehouse.rs  endpoint_stats.rs  generic_table_name_collision.rs  generic_table_protection.rs  internal_helper.rs  mod.rs  namespace_ops.rs  referenced_by.rs  referenced_by_generic_table.rs  role_ops.rs  soft_deletion.rs  stats.rs  tasks.rs  (+1 more)
(+1501 files in other folders)
