[package]
name = "lakekeeper-authz-openfga"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

description = "OpenFGA Authorizer for Lakekeeper"
keywords = ["iceberg", "rest", "lakekeeper", "openfga"]

[lib]

[features]
open-api = ["dep:utoipa", "lakekeeper/open-api"]

[dependencies]
anyhow = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lakekeeper = { path = "../lakekeeper", default-features = false }
openfga-client = { version = "0.5.1", features = [
    "auth-middle",
    "tls-rustls",
    "tls-webpki-roots",
    "tls-native-roots",
] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }
veil = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
figment = { workspace = true, features = ["test"] }
itertools = { workspace = true }
lakekeeper = { path = "../lakekeeper", features = ["test-utils"] }
sqlx = { workspace = true }
tracing-test = { workspace = true }
