[package]
name = "iceberg-ext"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

description = "Extensions for Apache Iceberg Rust"
keywords = ["iceberg", "rest", "extension"]

[lib]

[features]
all = ['axum']
axum = ['dep:axum']

[dependencies]
axum = { workspace = true, optional = true }
chrono = { workspace = true }
heck = { workspace = true }
http = { workspace = true }
iceberg = { workspace = true }
lakekeeper-io = { path = "../io", default-features = false }
paste = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes", "valuable"] }
typed-builder = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
valuable = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[dev-dependencies]
bytes = { workspace = true }
futures-util = { version = "^0.3" }
lakekeeper-io = { path = "../io", default-features = false, features = [
    "storage-in-memory",
] }
lazy_static = { workspace = true }
tokio = { workspace = true }
