[package]
name = "lakekeeper-bin"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
This is Lakekeeper, a catalog for Iceberg tables.
"""

[[bin]]
name = "lakekeeper"
path = "src/main.rs"

[features]
default = []
all = ["ui"]
ui = ["dep:lakekeeper-console"]
open-api = ["lakekeeper-authz-openfga/open-api", "lakekeeper/open-api"]

[dependencies]
anyhow = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
figment = { workspace = true }
http = { workspace = true }
lakekeeper = { path = "../lakekeeper", features = [
    "sqlx-postgres",
    "s3-signer",
    "router",
    "nats",
    "vendored-protoc",
    "kafka",
] }
lakekeeper-authz-openfga = { path = "../authz-openfga" }
lakekeeper-console = { git = "https://github.com/lakekeeper/console", rev = "v0.11.0", optional = true }
limes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
