[package]
name = "lakekeeper-bin"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
This is Lakekeeper, a catalog for Iceberg tables.
"""

[[bin]]
name = "lakekeeper"
path = "src/main.rs"

[features]
default = []
all = ["ui"]
ui = ["dep:lakekeeper-console"]
open-api = [
    "lakekeeper-authz-openfga/open-api",
    "lakekeeper/open-api",
    "lakekeeper-storage-postgres/open-api",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
figment = { workspace = true }
http = { workspace = true }
lakekeeper = { path = "../lakekeeper", features = ["s3-signer", "router"] }
lakekeeper-authz-openfga = { path = "../authz-openfga" }
lakekeeper-console = { git = "https://github.com/lakekeeper/console", rev = "v0.15.1", optional = true }
lakekeeper-events-kafka = { path = "../lakekeeper-events-kafka" }
lakekeeper-events-nats = { path = "../lakekeeper-events-nats" }
lakekeeper-secrets-kv2 = { path = "../lakekeeper-secrets-kv2" }
lakekeeper-storage-postgres = { path = "../lakekeeper-storage-postgres" }
limes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tikv-jemallocator = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { workspace = true, features = ["background_threads"] }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
