[package]
name = "lakekeeper-integration-tests"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Integration tests for Lakekeeper exercising the service layer against a concrete storage backend (today: Postgres; future: SQLite, FoundationDB, ...)."
publish = false

[lib]

[features]
# Forwards lakekeeper's `open-api` to compile `utoipa::ToSchema` derives that
# the `QueueConfig` trait bound requires when the upstream feature is on.
open-api = ["lakekeeper/open-api", "dep:utoipa"]

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
http = { workspace = true }
iceberg = { workspace = true }
iceberg-ext = { path = "../iceberg-ext", features = ["axum"] }
itertools = { workspace = true }
lakekeeper = { path = "../lakekeeper", features = ["test-utils", "router", "sqlx-postgres"] }
lakekeeper-io = { path = "../io", features = ["storage-in-memory"] }
lakekeeper-storage-postgres = { path = "../lakekeeper-storage-postgres", features = ["test-utils"] }
maplit = { workspace = true }
pastey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid"] }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
aws-sdk-s3 = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
# Real OpenFGA authorizer for the OpenFGA+Postgres role-membership e2e harness.
lakekeeper-authz-openfga = { path = "../authz-openfga", features = ["test-utils"] }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
