[package]
name = "lakekeeper"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Lakekeeper is a rust-native Apache Iceberg REST Catalog implementation
"""

[features]
all = [
    "sqlx-postgres",
    "s3-signer",
    "router",
    "nats",
    "vendored-protoc",
    "kafka",
    "open-api",
]
sqlx-postgres = ["sqlx"]
sqlx = ["dep:sqlx"]
s3-signer = ["dep:aws-sigv4"]
router = ["dep:tower-http", "dep:tower"]
nats = ["dep:async-nats"]
default = ["sqlx-postgres", "s3-signer", "router", "vendored-protoc"]
kafka = ["dep:rdkafka", "dep:openssl-src"]
vendored-protoc = []
test-utils = ["lakekeeper-io/storage-in-memory"]
open-api = ["dep:utoipa", "dep:utoipa-swagger-ui", "dep:serde_norway"]

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-nats = { workspace = true, optional = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { version = "^1.2" }
aws-sdk-sts = { workspace = true }
aws-sigv4 = { version = "^1.2", optional = true }
aws-smithy-http = { workspace = true }
aws-smithy-http-client = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-prometheus = { workspace = true }
azure_core = { workspace = true }
azure_identity = { workspace = true }
azure_storage = { workspace = true }
azure_storage_blobs = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
cloudevents-sdk = { workspace = true }
derive_more = { workspace = true }
fastrand = { workspace = true }
figment = { workspace = true }
figment_file_provider_adapter = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
google-cloud-auth = { workspace = true }
google-cloud-token = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { version = "~0.1" }
iceberg = { workspace = true }
iceberg-ext = { path = "../iceberg-ext", features = ["axum"] }
iso8601 = { workspace = true }
itertools = { workspace = true }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
jwks_client_rs = { workspace = true }
lakekeeper-io = { path = "../io", features = [
    "storage-s3",
    "storage-adls",
    "storage-gcs",
] }
lazy-regex = { workspace = true }
lazy_static = { workspace = true }
limes = { workspace = true }
middle = { workspace = true }
moka = { workspace = true }
paste = { workspace = true }
percent-encoding = { workspace = true }
quick-xml = { workspace = true }
rdkafka = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_norway = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, features = ["tls-rustls"] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = [
    "default",
    "request-id",
    "util",
    "cors",
] }
tracing = { workspace = true }
tryhard = { workspace = true }
typed-builder = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true, features = ["uuid"], optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
uuid = { workspace = true }
vaultrs = "0.7.2"
vaultrs-login = "0.2.1"
veil = { workspace = true }

[build-dependencies]
openssl-src = { version = "300.4.2", features = [
    "force-engine",
], default-features = false, optional = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
figment = { workspace = true, features = ["test"] }
http-body-util = { workspace = true }
lakekeeper = { path = ".", features = ["test-utils"] }
lakekeeper-io = { path = "../io", features = ["storage-in-memory"] }
maplit = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
serde_norway = { workspace = true }
serde_urlencoded = "0.7.1"
similar = { workspace = true }
tempfile = { version = "3.20" }
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
