[package]
name = "lakekeeper"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Lakekeeper is a rust-native Apache Iceberg REST Catalog implementation
"""

[package.metadata.cargo-machete]
# `cloudevents-sdk` imported as `cloudevents`; `k8s-openapi` is a features-only
# dep that selects the Kubernetes API version for the transitive limes copy.
ignored = ["cloudevents-sdk", "k8s-openapi"]

[features]
all = ["s3-signer", "router", "open-api"]
s3-signer = ["dep:aws-sigv4"]
router = ["dep:tower-http", "dep:tower"]
default = ["s3-signer", "router"]
test-utils = ["lakekeeper-io/storage-in-memory"]
open-api = ["dep:utoipa", "dep:utoipa-swagger-ui", "dep:serde_norway"]
# Enable `derive(sqlx::Type)` on lakekeeper's domain enums/newtypes so that
# storage backends (e.g. `lakekeeper-storage-postgres`) can `bind()` and
# `query_as!` these types directly without a wrapper layer. Named for the
# concrete backend because postgres and (future) mariadb-via-sqlx are
# mutually exclusive — keep one feature per backend.
sqlx-postgres = ["dep:sqlx"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sigv4 = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-prometheus = { workspace = true }
azure_core = { workspace = true }
azure_storage = { workspace = true }
azure_storage_blobs = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
cloudevents-sdk = { workspace = true }
derive_more = { workspace = true }
fastrand = { workspace = true }
figment = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
google-cloud-auth = { workspace = true }
google-cloud-token = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { version = "~0.1" }
iceberg = { workspace = true }
iceberg-ext = { path = "../iceberg-ext", features = ["axum"] }
iso8601 = { workspace = true }
itertools = { workspace = true }
# Selects the Kubernetes API version for the k8s-openapi that `limes` pulls in
# transitively (limes leaves the choice to the consumer). Not used directly.
k8s-openapi = { workspace = true, features = ["v1_32"] }
lakekeeper-io = { path = "../io", features = [
    "storage-s3",
    "storage-adls",
    "storage-gcs",
] }
lazy-regex = { workspace = true }
limes = { workspace = true }
moka = { workspace = true }
pastey = { workspace = true }
percent-encoding = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_norway = { workspace = true, optional = true }
serde_urlencoded = { workspace = true }
sqlx = { workspace = true, optional = true, features = ["tls-rustls"] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-metrics = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = [
    "default",
    "request-id",
    "util",
    "cors",
] }
tracing = { workspace = true, features = ["attributes", "valuable"] }
typed-builder = { workspace = true }
unicase = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true, features = ["uuid"], optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
uuid = { workspace = true }
valuable = { workspace = true, features = ["derive"] }
veil = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[dev-dependencies]
assert-json-diff = { workspace = true }
aws-sdk-s3 = { workspace = true }
bytes = { workspace = true }
figment = { workspace = true, features = ["test"] }
http-body-util = { workspace = true }
lakekeeper = { path = ".", features = ["test-utils"] }
lakekeeper-io = { path = "../io", features = ["storage-in-memory"] }
maplit = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
serde_norway = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
